src/styles/about.css
@media screen and (min-width: 48.75rem) {
  #menu-about .oval-text {
    text-decoration: underline;
    text-underline-offset: 0.3em;
    text-decoration-color: #463f3c;
    text-decoration-thickness: 2px;
  }
}

#portrait-bio {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  gap: 2rem 2rem;
}

#portrait {
  max-width: 250px;
  /* max-height: 250px; */
  width: 100%;
  height: auto;
}

#bio {
  flex-basis: 50%;
  flex-grow: 2;
  position: relative;
  bottom: 0.5em;
}

